base/infra/nginx-gateway-fabric/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
  labels:
    name: nginx-gateway
